# multimodal-finance-rag

./: .gitignore  CLAUDE.md  README.md  agents.md  conftest.py  main.py  pyproject.toml  requirements.txt  skills.md  template.py
backend/: app.py
backend/models/: api_schemas.py  schemas.py
docs/superpowers/plans/: 2026-04-09-frontend-backend.md
docs/superpowers/specs/: 2026-04-09-frontend-backend-design.md  2026-04-10-parallel-fan-out-routing-design.md
frontend/: streamlit_app.py
src/agents/: chart_agent.py  comparision_agent.py  orchestrator_agent.py  state.py  stock_agent.py  summary_agent.py
src/core/: embeddings.py  memory.py  pdf_processor.py  vector_store.py
src/exceptions/: custom_exceptions.py
src/logger/: custom_logger.py
src/mcp_server/: server.py
src/memory/: checkpoint.py  long_term.py
src/models/: schemas.py
src/prompts/: chart_prompt.py  comparision_prompt.py  router_prompt.py  summary_prompt.py
src/settings/: config.py
tests/: test_backend.py  test_chart_agent.py  test_parallel_routing.py  test_vector_store.py
